--- a/templates/Default/template/footer.template.htm
+++ b/templates/Default/template/footer.template.htm
@@ -7,12 +7,12 @@
 		<div class="top">
 			
 			<div class="linkbox">
-				<div class="head">خودروپارس</div>
+				<div class="head">نورین مدار</div>
 				<div class="links">
 					<a href="./blog">وبلاگ</a>
-					<a href="./about">درباره خودروپارس</a>
-					<a href="./press">خودروپارس در اخبار</a>
-					<a href="./learn">خودروپارس چگونه کار میکند</a>
+					<a href="./about">درباره نورین مدار</a>
+					<a href="./press">نورین مدار در اخبار</a>
+					<a href="./learn">نورین مدار چگونه کار میکند</a>
 				</div>
 			</div>
 
