--- a/components/news-2/news_list_air.css
+++ b/components/news-2/news_list_air.css
@@ -5,6 +5,8 @@
 	max-width: 100%;
 	margin: auto;
 	direction: rtl;
+	border-bottom: 2px solid #A1747C;
+	border-radius: 0px 0px 0px 20px;
 }
 .news_list_air .div_r {
 	display: inline-block;
