--- a/templates/Default/css/header.css
+++ b/templates/Default/css/header.css
@@ -4,7 +4,7 @@
 #header {
 	width: 1100px;
 	max-width: 100%;
-	height: 70px;
+	height: 80px;
 	direction: rtl;
 	position: relative;
 	/*background-color: #f5f5f5;*/
@@ -12,13 +12,15 @@
 
 }
 #header a.logo {
-	position: absolute; top: 10px; right: 0px;
+	position: absolute; top: 0px; left: 0px;
 }
 #header a.logo > img {
 
+width: 500px;
+height: 80px;
 }
 #header div.linkbar_index_simple {
-	position: absolute; top: 20px; /*right: 270px;*/ left: 0px;
+	position: absolute; top: 20px; /*right: 270px;*/ right: 10px;
 }
 #header div.linkbar_index_simple > a {
 	text-decoration: none;
