--- a/templates/Default/template/html-tag-open.template.htm
+++ b/templates/Default/template/html-tag-open.template.htm
@@ -3,7 +3,7 @@
 <head>
 	<META http-equiv=Content-Type content="text/html; charset=utf-8">
 	
-	<title>{meta_title}</title>
+	<title>نورین مدار </title>
 	<META name="keywords" content="{meta_kw}" />
 	<META name="description" content="{meta_desc}" />
 	
