--- a/templates/Default/template/footer.template.htm
+++ b/templates/Default/template/footer.template.htm
@@ -21,7 +21,7 @@
 				<div class="links">
 					<a href="./contact">تماس با ما</a>
 					<a href="./agent">دریافت نمایندگی</a>
-					<a href="./business">خودرو پارس برای کسب کار شما</a>
+					<a href="./business">نوین مدار برای کسب کار شما</a>
 				</div>
 			</div>
 
@@ -29,7 +29,6 @@
 				<div class="head">بیشتر بدانید</div>
 				<div class="links">
 					<a href="./sitemap.xml">سایت مپ</a>
-					<a href="./rss/auto.xml">آر اس اس خودرو ها</a>
 					<a href="./rss/autoparts.xml">آر اس اس قطعات</a>
 					<a href="./rss/news.xml">آر اس اس اخبار</a>
 				</div>
@@ -54,7 +53,7 @@
 		<div class="right">
 			<div class="rights">{about}</div>
 			<div class="links">
-				<a href="./terms">قوانین و مقرارت خودرو پارس</a>
+				<a href="./terms">قوانین و مقرارت نوین مدار</a>
 				<a href="./privacy">ضوابط حفظ حریم خصوصی</a>
 			</div>
 		</div>
