--- a/templates/Default/css/header.css
+++ b/templates/Default/css/header.css
@@ -16,11 +16,12 @@
 }
 #header a.logo > img {
 
-width: 500px;
-height: 80px;
+width: 300px;
+height: 60px;
+margin-left: 70px;
 }
 #header div.linkbar_index_simple {
-	position: absolute; top: 20px; /*right: 270px;*/ right: 10px;
+	position: absolute; top: 20px; /*right: 270px;*/ right: 80px;
 }
 #header div.linkbar_index_simple > a {
 	text-decoration: none;
