--- a/components/irtoya_staff/is_list.css
+++ b/components/irtoya_staff/is_list.css
@@ -6,7 +6,7 @@
 .is_list > .r {
 	padding: 0px;
 	margin: 6px 5px;
-	width: 250px !important;
+	width: 29.5% !important;
 	border-radius: 4px;
 }
 .is_list > .r > img.main {
