--- a/templates/Default/css/header.css
+++ b/templates/Default/css/header.css
@@ -15,8 +15,9 @@
 	position: absolute; top: 0px; left: 0px;
 }
 #header a.logo > img {
-width: 80px;
-margin-left: 150px;
+width: 220px;
+height: 70px;
+margin-left: 90px;
 }
 #header div.linkbar_index_simple {
 	position: absolute; top: 20px; /*right: 270px;*/ right: 80px;
