--- a/templates/Default/template/footer.template.htm
+++ b/templates/Default/template/footer.template.htm
@@ -9,10 +9,7 @@
 			<div class="linkbox">
 				<div class="head">نورین مدار</div>
 				<div class="links">
-					<a href="./blog">وبلاگ</a>
 					<a href="./about">درباره نورین مدار</a>
-					<a href="./press">نورین مدار در اخبار</a>
-					<a href="./learn">نورین مدار چگونه کار میکند</a>
 				</div>
 			</div>
 
@@ -20,8 +17,6 @@
 				<div class="head">ارتباط بیشتر</div>
 				<div class="links">
 					<a href="./contact">تماس با ما</a>
-					<a href="./agent">دریافت نمایندگی</a>
-					<a href="./business">نوین مدار برای کسب کار شما</a>
 				</div>
 			</div>
 
@@ -29,7 +24,7 @@
 				<div class="head">بیشتر بدانید</div>
 				<div class="links">
 					<a href="./sitemap.xml">سایت مپ</a>
-					<a href="./rss/autoparts.xml">آر اس اس قطعات</a>
+					<a href="./rss/autoparts.xml">آر اس اس محصولات</a>
 					<a href="./rss/news.xml">آر اس اس اخبار</a>
 				</div>
 			</div>
@@ -37,8 +32,6 @@
 			<div class="linkbox">
 				<div class="head">سایر خدمات</div>
 				<div class="links">
-					<a href="./support">تماس با واحد پشتیبانی</a>
-					<a href="./?page=55">امور مشتریان</a>
 					<a href="./online-payment">راهنمای پرداخت آنلاین</a>
 					<a href="./faq">سوالات متداول</a>
 				</div>
