--- a/components/irtoya_staff/is_management_form.css
+++ b/components/irtoya_staff/is_management_form.css
@@ -47,5 +47,10 @@
 	
 }
 #is_management_form_desc{
-
+	width: 100%;
+	height: 150px;
+}
+#is_management_form_technical_features{
+	width: 100%;
+	height: 150px;	
 }
