--- a/components/irtoya_staff/is_list.css
+++ b/components/irtoya_staff/is_list.css
@@ -14,7 +14,7 @@
 	width: 90%;
     height: 192px;
     margin: 10px;
-    text-align: center;
+    text-align: right;
     border-radius: 4px;
 }
 .is_list > .r div.tiny {
