--- a/templates/Default/css/main.css
+++ b/templates/Default/css/main.css
@@ -18,8 +18,8 @@
 	margin-bottom: 30px;
 }
 #main_center {
-	max-width: 1200px;
-	width:80%;
+	max-width: 100%;
+	width:85%;
 	margin: 0 auto;
 	padding: 0px 54px;
 	direction: rtl;
