--- a/components/irtoya_staff/is_list.css
+++ b/components/irtoya_staff/is_list.css
@@ -5,8 +5,8 @@
 }
 .is_list > .r {
 	padding: 0px;
-	margin: 6px 5px;
-	width: 32% !important;
+	/*margin: 6px 5px;*/
+	width: 33% !important;
 	border-radius: 4px;
 }
 .is_list > .r > img.main {
